Move test-run commands to script.

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,7 @@ deps=
     jsonschema<4
 commands=
     python -VV
-    ansible-playbook -i localhost, workflow-support/test-tsigkey.yml
-    ansible-playbook -i localhost, workflow-support/test-zone.yml
-    ansible-playbook -i localhost, workflow-support/test-zone-issue-136.yml
+    bash -c 'workflow-support/run_test_playbooks.sh'
 
 [galaxy-base]
 deps=
@@ -59,6 +57,7 @@ commands=
     bash -c 'ansible-lint --write all --strict --profile production -v'
 
 [testenv:py{38,39,310,311}-ci-action]
+allowlist_externals=bash
 passenv=pdns_version
 deps=
     {[galaxy-base]deps}
