--- a/workflow-support/test-zone-rrset.yml
+++ b/workflow-support/test-zone-rrset.yml
@@ -99,7 +99,7 @@
           - result['exception'] is not defined
           - result.failed
 
-    - name: check zone creation of a zone with more than one rrset, non default ttl and disabled record
+    - name: check zone creation of a zone with more than one rrset
       kpfleming.powerdns_auth.zone:
         <<: *common
         name: d4.rrset.example.
@@ -114,19 +114,14 @@
           rrsets:
             - name: t1.d4.rrset.example.
               type: A
-              ttl: 900
               records:
                 - content: 192.168.0.0
-                  disabled: true
                 - content: 192.168.0.1
                 - content: 192.168.1.2
                 - content: 192.168.3.4
             - name: t2.d4.rrset.example.
               type: A
-              ttl: 600
               records:
-                - content: 192.168.4.0
-                  disabled: true
                 - content: 192.168.5.1
                 - content: 192.168.6.2
                 - content: 192.168.7.4
@@ -139,16 +134,79 @@
           - result['exception'] is not defined
           - not result.failed
           - result.changed
-          - t1_d4_rrset[0]['type'] == 'A'
-          - t1_d4_rrset[0]['ttl'] == 900
-          - (t1_d4_rrset | sort(attribute='address'))[0]['address'] == "192.168.0.1"
-          - (t1_d4_rrset | sort(attribute='address'))[1]['address'] == "192.168.1.2"
-          - (t1_d4_rrset | sort(attribute='address'))[2]['address'] == "192.168.3.4"
-          - t2_d4_rrset[0]['type'] == 'A'
-          - t2_d4_rrset[0]['ttl'] == 600
-          - (t2_d4_rrset | sort(attribute='address'))[0]['address'] == "192.168.5.1"
-          - (t2_d4_rrset | sort(attribute='address'))[1]['address'] == "192.168.6.2"
-          - (t2_d4_rrset | sort(attribute='address'))[2]['address'] == "192.168.7.4"
+          - (t1_d4_rrset | length) == 4
+          - '"192.168.0.0" in t1_d4_rrset'
+          - '"192.168.0.1" in t1_d4_rrset'
+          - '"192.168.1.2" in t1_d4_rrset'
+          - '"192.168.3.4" in t1_d4_rrset'
+          - (t2_d4_rrset | length) == 3
+          - '"192.168.5.1" in t2_d4_rrset'
+          - '"192.168.6.2" in t2_d4_rrset'
+          - '"192.168.7.4" in t2_d4_rrset'
       vars:
-        t1_d4_rrset: "{{ lookup('dig_local', 't1.d4.rrset.example.', qtype='A', flat=0, fail_on_error=false, real_empty=false) }}"
-        t2_d4_rrset: "{{ lookup('dig_local', 't2.d4.rrset.example.', qtype='A', flat=0, fail_on_error=false, real_empty=false) }}"
+        t1_d4_rrset: "{{ query('dig_local', 't1.d4.rrset.example.', qtype='A', flat=1, fail_on_error=false, real_empty=false) }}"
+        t2_d4_rrset: "{{ query('dig_local', 't2.d4.rrset.example.', qtype='A', flat=1, fail_on_error=false, real_empty=false) }}"
+
+    - name: check zone creation with one rrset, with non-default TTL
+      kpfleming.powerdns_auth.zone:
+        <<: *common
+        name: d5.rrset.example.
+        state: present
+        properties:
+          kind: Native
+          nameservers:
+            - ns.example.
+          soa:
+            mname: localhost.
+            rname: hostmaster.localhost.
+          rrsets:
+            - name: t1.d5.rrset.example.
+              type: A
+              ttl: 900
+              records:
+                - content: 192.168.0.1
+      ignore_errors: true
+      register: result
+
+    - ansible.builtin.assert:
+        quiet: true
+        that:
+          - result['exception'] is not defined
+          - not result.failed
+          - result.changed
+          - d5_rrset['ttl'] == 900
+      vars:
+        d5_rrset: "{{ lookup('dig_local', 't1.d5.rrset.example.', qtype='A', flat=0, fail_on_error=false, real_empty=false) }}"
+
+    - name: check zone creation with one rrset, with a disabled rr
+      kpfleming.powerdns_auth.zone:
+        <<: *common
+        name: d6.rrset.example.
+        state: present
+        properties:
+          kind: Native
+          nameservers:
+            - ns.example.
+          soa:
+            mname: localhost.
+            rname: hostmaster.localhost.
+          rrsets:
+            - name: t1.d6.rrset.example.
+              type: A
+              records:
+                - content: 192.168.0.1
+                - content: 192.168.1.2
+                  disabled: true
+                - content: 192.168.3.4
+      ignore_errors: true
+      register: result
+
+    - ansible.builtin.assert:
+        quiet: true
+        that:
+          - result['exception'] is not defined
+          - not result.failed
+          - result.changed
+          - '"192.168.1.2" not in d6_rrset'
+      vars:
+        d6_rrset: "{{ query('dig_local', 't1.d6.rrset.example.', qtype='A', flat=1, fail_on_error=false, real_empty=false) }}"
