Disable Ruff rule that shouldn't be applied here.

--- a/workflow-support/lint_paths.yml
+++ b/workflow-support/lint_paths.yml
@@ -1,6 +1,7 @@
 paths:
   - 'src/**/*.py'
   - 'tox.ini'
+  - 'pyproject.toml'
   - 'workflow-support/*.sh'
   - 'workflow-support/test-*.yml'
   - '.github/workflows/lint.yml'
