--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,13 @@ deps=
     black>=23
     ruff>=0.0.237
     ansible-lint
+    antsibull-docs
+
+[antsibull-docs-base]
+commands=
+    bash -c 'mkdir {envtmpdir}/docs-build'
+    bash -c 'chmod g-w {envtmpdir}/docs-build'
+    antsibull-docs collection --fail-on-error --use-current --dest-dir {envtmpdir}/docs-build kpfleming.powerdns_auth
 
 [testenv:lint-action]
 ignore_errors=true
@@ -40,7 +47,8 @@ commands=
     black --check --diff --preview src
     ruff check --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --strict --profile production -v'
+    ansible-lint --strict --profile production -v
+    {[antsibull-docs-base]commands}
 
 [testenv:lint]
 allowlist_externals=bash
@@ -54,7 +62,8 @@ commands=
     black --preview src
     ruff check --fix src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --write all --strict --profile production -v'
+    ansible-lint --write all --strict --profile production -v
+    {[antsibull-docs-base]commands}
 
 [testenv:py{38,39,310,311,312}-ci-action]
 allowlist_externals=bash
@@ -73,7 +82,7 @@ commands=
 deps=
     {[galaxy-base]deps}
 setenv=
-    TAG=local
+    TAG=0.0.0-local
 commands=
     ansible-playbook -i localhost, workflow-support/build.yml
 
