Add documentation links to README and Galaxy metadata.
Switch to reference links in README.

--- a/workflow-support/ci_paths.yml
+++ b/workflow-support/ci_paths.yml
@@ -4,5 +4,6 @@ paths:
   - 'workflow-support/test-*.yml'
   - 'workflow-support/*.sh'
   - 'workflow-support/versions.json'
+  - 'workflow-support/templates/galaxy.yml.j2'
   - '.github/workflows/ci.yml'
   - '.github/workflows/test.yml'
