Improve docs and workflow consistency.

--- a/tox.ini
+++ b/tox.ini
@@ -18,52 +18,51 @@ deps=
 setenv=
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands=
-    ansible-playbook -i localhost, workflow-support/make-galaxy-yml.yml
+    ansible-playbook -i localhost, workflow-support/make_galaxy_files.yml
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
 
 [lint-base]
 deps=
+    {[galaxy-base]deps}
     black>=23
     ruff>=0.0.237
     ansible-lint
     antsibull-docs
-
-[antsibull-docs-base]
+setenv=
+    {[galaxy-base]setenv}
 commands=
+    {[galaxy-base]commands}
+    bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'mkdir {envtmpdir}/docs-build'
     bash -c 'chmod g-w {envtmpdir}/docs-build'
     antsibull-docs collection --fail-on-error --use-current --dest-dir {envtmpdir}/docs-build kpfleming.powerdns_auth
 
 [testenv:lint-action]
 ignore_errors=true
-allowlist_externals=bash
+allowlist_externals=
+    bash
 deps=
-    {[galaxy-base]deps}
     {[lint-base]deps}
 setenv=
-    {[galaxy-base]setenv}
+    {[lint-base]setenv}
 commands=
-    {[galaxy-base]commands}
+    {[lint-base]commands}
     black --check --diff --preview src
     ruff check --format=github src
-    bash -c 'shellcheck workflow-support/*.sh'
     ansible-lint --strict --profile production -v
-    {[antsibull-docs-base]commands}
 
 [testenv:lint]
-allowlist_externals=bash
+allowlist_externals=
+    bash
 deps=
-    {[galaxy-base]deps}
     {[lint-base]deps}
 setenv=
-    {[galaxy-base]setenv}
+    {[lint-base]setenv}
 commands=
-    {[galaxy-base]commands}
+    {[lint-base]commands}
     black --preview src
     ruff check --fix src
-    bash -c 'shellcheck workflow-support/*.sh'
     ansible-lint --write all --strict --profile production -v
-    {[antsibull-docs-base]commands}
 
 [testenv:py{38,39,310,311,312}-ci-action]
 allowlist_externals=bash
@@ -82,7 +81,7 @@ commands=
 deps=
     {[galaxy-base]deps}
 setenv=
-    TAG=0.0.0-local
+    TAG=0.0.0
 commands=
     ansible-playbook -i localhost, workflow-support/build.yml
 
