--- a/workflow-support/ci_paths.yml
+++ b/workflow-support/ci_paths.yml
@@ -1,9 +1,12 @@
 paths:
-  - 'src/**/*.py'
-  - 'tox.ini'
-  - 'workflow-support/test-*.yml'
-  - 'workflow-support/*.sh'
-  - 'workflow-support/versions.json'
-  - 'workflow-support/templates/galaxy.yml.j2'
   - '.github/workflows/ci.yml'
   - '.github/workflows/test.yml'
+  - 'src/**/*.py'
+  - 'tox.ini'
+  - 'workflow-support/*.sh'
+  - 'workflow-support/build.yml'
+  - 'workflow-support/ci_paths.yml'
+  - 'workflow-support/make_galaxy_files.yml'
+  - 'workflow-support/templates/*.yml.j2'
+  - 'workflow-support/test-*.yml'
+  - 'workflow-support/versions.json'
