Add docs to 'publish' workflow.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,12 @@
-name: Publish to Ansible Galaxy
+name: Publish Artifacts
 
 on:
   push:
     tags:
       - '*'
+
+permissions:
+  contents: write
 
 jobs:
   image_details:
@@ -15,7 +18,7 @@ jobs:
       uses: kpfleming/composite-actions/image-details@v2
       with:
         base_image: python:bookworm-main
-  publish:
+  publish_galaxy:
     runs-on: ubuntu-22.04
     needs:
     - image_details
@@ -27,3 +30,19 @@ jobs:
       with:
         galaxy_token: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
         tag: ${{ github.ref_name }}
+  publish_docs:
+    runs-on: ubuntu-22.04
+    container:
+      image: docker.io/python:3.11
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        ref: docsite
+        path: docsite
+    - run: docsite/workflow-support/make_docs.sh
+    - uses: EndBug/add-and-commit@v9
+      with:
+        cwd: docsite
+        add: --no-ignore-removal
+        tag: ${{ github.ref_name }} --force
+        tag_push: --force
