--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
         tag: ${{ github.ref_name }}
   publish_docs:
     runs-on: ubuntu-22.04
+    needs:
+    - publish_galaxy
     container:
       image: docker.io/python:3.11
     steps:
@@ -43,6 +45,6 @@ jobs:
     - uses: EndBug/add-and-commit@v9
       with:
         cwd: docsite
-        add: --no-ignore-removal
-        tag: ${{ github.ref_name }} --force
+        add: . --no-ignore-removal
+        tag: docsite-${{ github.ref_name }} --force
         tag_push: --force
