Use j2cli instead of ansible-playbook for rendering templates.
Reorganize and cleanup tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -2,93 +2,107 @@
 envlist=lint
 skipsdist=True
 
-[ansible-base]
-deps=
-    bravado
-    ansible
-    swagger-spec-validator==2.6.0
-    jsonschema<4
-commands=
-    python -VV
-    bash -c 'workflow-support/run_test_playbooks.sh'
-
-[galaxy-base]
+[galaxy-setup]
 deps=
     ansible
+    git+https://github.com/kpfleming/j2cli
 setenv=
+    TAG=main
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands=
-    ansible-playbook -i localhost, workflow-support/make_galaxy_files.yml
+    j2 -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
 
 [lint-base]
 deps=
-    {[galaxy-base]deps}
+    {[galaxy-setup]deps}
     black>=23
     ruff>=0.0.237
     ansible-lint
     antsibull-docs
 setenv=
-    {[galaxy-base]setenv}
+    {[galaxy-setup]setenv}
+allowlist_externals=
+    bash
+commands_pre=
+    {[galaxy-setup]commands}
 commands=
-    {[galaxy-base]commands}
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'mkdir {envtmpdir}/docs-build'
     bash -c 'chmod g-w {envtmpdir}/docs-build'
     antsibull-docs collection --fail-on-error --use-current --dest-dir {envtmpdir}/docs-build kpfleming.powerdns_auth
 
 [testenv:lint-action]
-ignore_errors=true
-allowlist_externals=
-    bash
 deps=
     {[lint-base]deps}
 setenv=
     {[lint-base]setenv}
-commands=
+allowlist_externals=
+    {[lint-base]allowlist_externals}
+commands_pre=
+    {[lint-base]commands_pre}
     {[lint-base]commands}
+commands=
     black --check --diff --preview src
     ruff check --format=github src
     ansible-lint --strict --profile production -v
 
 [testenv:lint]
-allowlist_externals=
-    bash
 deps=
     {[lint-base]deps}
 setenv=
     {[lint-base]setenv}
-commands=
+allowlist_externals=
+    {[lint-base]allowlist_externals}
+commands_pre=
+    {[lint-base]commands_pre}
     {[lint-base]commands}
+commands=
     black --preview src
     ruff check --fix src
     ansible-lint --write all --strict --profile production -v
 
 [testenv:py{38,39,310,311,312}-ci-action]
-allowlist_externals=bash
-passenv=pdns_version
 deps=
-    {[galaxy-base]deps}
-    {[ansible-base]deps}
+    {[galaxy-setup]deps}
+    bravado
+    ansible
+    swagger-spec-validator==2.6.0
+    jsonschema<4
     dnspython
 setenv=
-    {[galaxy-base]setenv}
+    {[galaxy-setup]setenv}
+passenv=
+    pdns_version
+allowlist_externals=
+    bash
+commands_pre=
+    {[galaxy-setup]commands}
 commands=
-    {[galaxy-base]commands}
-    {[ansible-base]commands}
+    bash -c 'workflow-support/run_test_playbooks.sh'
+
+[build-base]
+deps=
+    {[galaxy-setup]deps}
+commands=
+    j2 -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
+    ansible-galaxy collection build --force src
 
 [testenv:build]
 deps=
-    {[galaxy-base]deps}
+    {[build-base]deps}
 setenv=
-    TAG=0.0.0
+    TAG=main
 commands=
-    ansible-playbook -i localhost, workflow-support/build.yml
+    {[build-base]commands}
 
 [testenv:publish-action]
-passenv=ANSIBLE_GALAXY_TOKEN,TAG
 deps=
-    {[galaxy-base]deps}
+    {[build-base]deps}
+passenv=
+    ANSIBLE_GALAXY_TOKEN
+    TAG
+commands_pre=
+    {[build-base]commands}
 commands=
-    ansible-playbook -i localhost, workflow-support/build.yml
-    ansible-playbook -i localhost, workflow-support/publish.yml
+    ansible-galaxy collection publish --token {env:ANSIBLE_GALAXY_TOKEN} kpfleming-powerdns_auth-{env:TAG}.tar.gz
