Improve tox.ini, adding make-tag environment.

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ deps=
 setenv=
     TAG=main
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
-commands=
+commands_pre=
     j2 -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
+commands=
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
 
 [lint-base]
@@ -25,6 +26,7 @@ setenv=
 allowlist_externals=
     bash
 commands_pre=
+    {[galaxy-setup]commands_pre}
     {[galaxy-setup]commands}
 commands=
     bash -c 'shellcheck workflow-support/*.sh'
@@ -77,6 +79,7 @@ passenv=
 allowlist_externals=
     bash
 commands_pre=
+    {[galaxy-setup]commands_pre}
     {[galaxy-setup]commands}
 commands=
     bash -c 'workflow-support/run_test_playbooks.sh'
@@ -84,8 +87,9 @@ commands=
 [build-base]
 deps=
     {[galaxy-setup]deps}
+commands_pre=
+    {[galaxy-setup]commands_pre}
 commands=
-    j2 -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
     ansible-galaxy collection build --force src
 
 [testenv:build]
@@ -94,7 +98,25 @@ deps=
 setenv=
     TAG=main
 commands=
+    {[build-base]commands_pre}
     {[build-base]commands}
+
+[testenv:make-tag]
+deps=
+    {[build-base]deps}
+passenv=
+    TAG
+allowlist_externals=
+    git
+    bash
+commands_pre=
+    {[build-base]commands_pre}
+commands=
+    git add --force src/galaxy.yml
+    bash -c 'git commit -am "Prepare tag ${TAG}"'
+    bash -c 'git tag -a -m "Version ${TAG}" ${TAG}'
+    bash -c 'git push kpf ${TAG}'
+    git reset --hard HEAD~1
 
 [testenv:publish-action]
 deps=
