--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,12 @@ skipsdist=True
 [galaxy-setup]
 deps=
     ansible
-    git+https://github.com/kpfleming/j2cli
+    jinjanator
 setenv=
     TAG=main
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands_pre=
-    j2 -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
+    jinjanate -o src/galaxy.yml workflow-support/templates/galaxy.yml.j2
 commands=
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
 
