Use ansible-core instead of full ansible package.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skipsdist=True
 
 [galaxy-setup]
 deps=
-    ansible
+    ansible-core
     jinjanator
 setenv=
     TAG=main
@@ -68,7 +68,7 @@ commands=
 deps=
     {[galaxy-setup]deps}
     bravado
-    ansible
+    ansible-core
     swagger-spec-validator==2.6.0
     jsonschema<4
     dnspython
