Reduce log output during Actions workflows.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,8 @@ jobs:
       image: ${{ inputs.image }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        show-progress: false
     - name: start pdns_server
       run: workflow-support/start_server.sh ${{ inputs.pdns }}
     - uses: kpfleming/composite-actions/ci-tox@v2
