Use --output-format for Ruff.

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands_pre=
     {[lint-base]commands}
 commands=
     black --check --diff --preview src
-    ruff check --format=github src
+    ruff check --output-format=github src
     ansible-lint --strict --profile production -v
 
 [testenv:lint]
