Minor changes for current linter versions.

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ commands_pre=
 commands=
     black --preview src
     ruff check --fix src
-    ansible-lint --write all --strict --profile production -v
+    ansible-lint --fix all --strict --profile production -v
 
 [testenv:py{38,39,310,311,312}-ci-action]
 deps=
