Switch to Ruff for formatting.
Enable most tests in Ruff.

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,7 @@ commands=
 [lint-base]
 deps=
     {[galaxy-setup]deps}
-    black>=23
-    ruff>=0.0.237
+    ruff>=0.2.0
     ansible-lint
     antsibull-docs
 setenv=
@@ -45,7 +44,7 @@ commands_pre=
     {[lint-base]commands_pre}
     {[lint-base]commands}
 commands=
-    black --check --diff --preview src
+    ruff format --check --diff src
     ruff check --output-format=github src
     ansible-lint --strict --profile production -v
 
@@ -60,8 +59,8 @@ commands_pre=
     {[lint-base]commands_pre}
     {[lint-base]commands}
 commands=
-    black --preview src
-    ruff check --fix src
+    ruff format src
+    ruff check --output-format=full --fix --show-fixes src
     ansible-lint --fix all --strict --profile production -v
 
 [testenv:py{38,39,310,311,312}-ci-action]
