--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,22 @@
-[tool.black]
-line-length = 100
-target-version = ['py38']
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.venv
-  | \venv
-  | _build
-  | build
-  | dist
-  | .tox
-)/
-'''
-
 [tool.ruff]
 src = ["src"]
-output-format = "grouped"
 target-version = "py38"
 line-length = 100
-select = [
-  "A",
-  "B",
-#  "C",
-  "COM",
-  "DTZ",
-  "E",
-  "F",
-  "I",
-  "ISC",
-  "N",
-  "PT",
-  "Q",
-  "RET",
-  "RUF",
-  "SIM",
-  "UP",
-  "W292",
-  "YTT",
-]
+
+[tool.ruff.lint]
+select = ["ALL"]
 ignore = [
-  "RUF012",
+  "ANN",      # Mypy is better at this.
+  "COM812",   # conflicts with formatter
+  "C901",     # Leave complexity to me.
+  "D",        # We have different ideas about docstrings.
+  "INP001",   # we don't care that these are in implicit namespace packages
+  "ISC001",   # conflicts with formatter
+  "PLR0912",  # Leave complexity to me.
+  "PLR0915",  # Leave complexity to me.
+  "PLW0603",  # globals are used intentionally here
+  "RUF012",   # no need for this warning in Ansible modules
+  "S101",     # assert
+  "TRY301",   # Raise in try blocks can totally make sense.
 ]
 unfixable = ["F401"]
