Switch to Forge registry.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,17 +29,17 @@ jobs:
     - id: get_versions
       run: cat workflow-support/versions.json >> $GITHUB_OUTPUT
     - id: details
-      uses: kpfleming/composite-actions/image-details@v2
+      uses: kpfleming/composite-actions/image-details@v3
       with:
         base_image: python:v4-bookworm-main
     - id: preflight
-      uses: kpfleming/composite-actions/ci-preflight@v2
+      uses: kpfleming/composite-actions/ci-preflight@v3
       with:
         ci_paths: workflow-support/ci_paths.yml
         files_hash: ${{ hashfiles('tox.ini', 'workflow-support/make_ci_image.sh', 'workflow-support/pdns_build.sh', 'workflow-support/versions.json', '.github/workflows/ci.yml') }}
         base_image_hash: ${{ steps.details.outputs.base_image_hash }}
     - id: make-ci-image
-      uses: kpfleming/composite-actions/make-ci-image@v2
+      uses: kpfleming/composite-actions/make-ci-image@v3
       if: steps.preflight.outputs.need_image == 'true'
       with:
         build_args: ${{ join(fromJSON(steps.get_versions.outputs.versions).pdns, ' ') }}
@@ -47,8 +47,8 @@ jobs:
         image_name: ${{ steps.details.outputs.image_base }}:${{ steps.preflight.outputs.image_tag }}
         image_cache_key: ${{ steps.preflight.outputs.image_cache_key }}
         image_registry: ${{ steps.details.outputs.image_registry }}
-        registry_username: ${{ secrets.QUAY_BOT_NAME }}
-        registry_password: ${{ secrets.QUAY_BOT_PASSWORD }}
+        registry_username: ${{ vars.FORGE_BOT_NAME }}
+        registry_password: ${{ secrets.FORGE_API_TOKEN }}
   ci:
     needs:
     - preflight
