Correct expressions for checking dict contents.

--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ commands=
     ruff check --output-format=full --fix --show-fixes src
     ansible-lint --fix all --strict --profile production -v
 
-[testenv:py{39,310,311,312,313,314}-ci-action]
+[testenv:py{39,310}-ci-action]
 deps=
     {[galaxy-setup]deps}
     ansible-core
@@ -81,7 +81,27 @@ commands_pre=
     {[galaxy-setup]commands_pre}
     {[galaxy-setup]commands}
 commands=
-    bash -c 'workflow-support/run_test_playbooks.sh'
+    bash -c 'workflow-support/run_test_playbooks.sh 2.15'
+
+[testenv:py{311,312,313,314}-ci-action]
+deps=
+    {[galaxy-setup]deps}
+    ansible-core
+    bravado
+    dnspython
+    jsonschema<4
+    swagger-spec-validator==2.6.0
+setenv=
+    {[galaxy-setup]setenv}
+passenv=
+    pdns_version
+allowlist_externals=
+    bash
+commands_pre=
+    {[galaxy-setup]commands_pre}
+    {[galaxy-setup]commands}
+commands=
+    bash -c 'workflow-support/run_test_playbooks.sh 2.19'
 
 [build-base]
 deps=
