Remove support for Python 3.9.

--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ commands=
     ruff check --output-format=full --fix --show-fixes src
     ansible-lint --fix all --strict --profile production -v
 
-[testenv:py{39,310}-ci-action]
+[testenv:py310-ci-action]
 deps=
     {[galaxy-setup]deps}
     ansible-core
